--- a/vm_stoop.1
+++ b/vm_stoop.1
@@ -4,86 +4,66 @@
 .Dt VM_STAT 1
 .Os "Mac OS X"
 .Sh NAME
-.Nm vm_stat
-.Nd show Mach virtual memory statistics
+.Nm vm_stoop
+.Nd show Mach virtual memory statistics without making you feel dumb
 .Sh SYNOPSIS
-.Nm vm_stat
-.Oo
-.Op Fl c Ar count
-.Ar interval
-.Oc
+.Nm vm_stoop
+.Ar modeline
 .Sh DESCRIPTION
-.Nm vm_stat 
-displays Mach virtual memory statistics.  If the optional 
-.Ar interval 
-is specified, then 
-.Nm vm_stat 
-will display the statistics every 
-.Ar interval 
-seconds.  In this case, each line of output displays the change in
-each statistic (an
-.Ar interval 
-count of 1 displays the values per second).  However, the first line
-of output following each banner displays the system-wide totals for
-each statistic.
-If a
-.Ar count
-is provided, the command will terminate after
-.Ar count
-intervals.
-The following values are displayed:
+.Nm vm_stoop
+displays Mach virtual memory statistics. The same statistics are 
+available via the
+.Nm vm_stat
+tool but when using
+.Nm vm_stoop(id)
+ they are formatted in units of bytes rather than Pages
+so that they may be more easily understoop by (vm_)stoopid humans.
+
+The values to be reported must be chosen using a
+.NM modeline
+argument, where each character in the modeline requests a statistic from
+the following list to be displayed.
 .Bl -tag -width indent
-.It Pages free
-the total number of free pages in the system.
-.It Pages active
-the total number of pages currently in use and pageable.
-.It Pages inactive
-the total number of pages on the inactive list.
-.It Pages speculative
-the total number of pages on the speculative list.
-.It Pages throttled
-the total number of pages on the throttled list (not wired but not pageable). 
-.It Pages wired down
-the total number of pages wired down.  That is, pages that cannot be
-paged out.
-.It Pages purgeable
-the total number of purgeable pages.
-.It Translation faults
-the number of times the "vm_fault" routine has been called.
-.It Pages copy-on-write
-the number of faults that caused a page to be
-copied (generally caused by copy-on-write faults).
-.It Pages zero filled
-the total number of pages that have been zero-filled on demand.
-.It Pages reactivated
-the total number of pages that have been moved from the inactive list
-to the active list (reactivated).
-.It Pages purged
-the total number of pages that have been purged.
-.It File-backed pages
-the total number of pages that are file-backed (non-swap)
-.It Anonymous pages
-the total number of pages that are anonymous
-.It Uncompressed pages
-the total number of pages (uncompressed) held within the compressor
-.It Pages used by VM compressor:
-the number of pages used to store compressed VM pages.
-.It Pages decompressed
-the total number of pages that have been decompressed by the VM compressor.
-.It Pages compressed
-the total number of pages that have been compressed by the VM compressor.
-.It Pageins
-the total number of requests for pages from a pager (such as the inode pager).
-.It Pageouts
-the total number of pages that have been paged out.
-.It Swapins
-the total number of compressed pages that have been swapped out to disk.
-.It Swapouts
-the total number of compressed pages that have been swapped back in from disk.
+.It f
+Memory free
+.It a
+Memory active
+.It i
+Memory inactive
+.It ~
+Memory speculative
+.It t
+Memory throttled
+.It w
+Memory wired down
+.It u
+Memory purgeable
+.It c
+Memory copy-on-write
+.It 0
+Memory zero filled
+.It r
+Memory reactivated
+.It U
+Memory purged
+.It b
+File-backed memory
+.It ?
+Anonymous memory
+.It .
+Memory stored in compressor
+.It o
+Memory occupied by compressor
 .El
+.Sh EXAMPLES
+The following examples are shown as given to the shell:
 .Pp
-If 
-.Ar interval 
-is not specified, then 
-.Nm vm_stat 
-displays all accumulated statistics along with the page size.
+Report free memory
+.Pp
+.D1 Li "vm_stoop f"
+.Pp
+Report free and active memory
+.Pp
+.D1 Li "vm_stoop fa"
+.Pp
+.Pp
